// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OffchainOrderLineItem > should render type EXCHANGE_RATE 1`] = `
<DocumentFragment>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
  >
    <span
      class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
      data-testid="swap-li-label"
    >
      Rate
    </span>
    <span
      class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
    >
      <div
        aria-label="1 USDC = <0.00001 DAI "
        class="[container-name:true] flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [container-type:normal] rounded-[12px] bg-transparent flex-row items-center justify-start flex-wrap gap-[4px] max-w-[100%] [cursor:pointer] [transition:transform_80ms_ease-in-out,_opacity_80ms_ease-in-out] [user-select:text] active:opacity-[0.75] active:[transform:scale(0.98)] focus-visible:[transform:scaleX(0.98)_scaleY(0.98)] focus-visible:[outline-offset:1px] focus-visible:[outline-style:solid] focus-visible:[outline-width:1px] focus-visible:[outline-color:var(--neutral3)] group"
        data-testid="trade-price-toggle"
        role="button"
        tabindex="0"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-left"
        >
          1 USDC = &lt;0.00001 DAI 
        </span>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] text-left"
        >
          ($1.00)
        </span>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`OffchainOrderLineItem > should render type NETWORK_COST 1`] = `
<DocumentFragment>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
  >
    <span
      class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
      data-testid="swap-li-label"
    >
      Network cost
    </span>
    <span
      class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
    >
      <span>
        $0
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`OffchainOrderLineItem > should render type TRANSACTION_ID 1`] = `
<DocumentFragment>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between w-[100%]"
  >
    <span
      class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)] [user-select:text] [cursor:auto]"
      data-testid="swap-li-label"
    >
      Transaction ID
    </span>
    <span
      class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)] text-right"
    >
      <a
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:535] [color:var(--stext-accent1)] no-underline [cursor:pointer] hover:opacity-[var(--ch-opacity)] active:opacity-[var(--ca-opacity)]"
        href="https://etherscan.io/tx/0x123"
        rel="noopener noreferrer"
        role="link"
        style="--ch-opacity: 0.6; --ca-opacity: 0.4; transition: opacity 100ms cubic-bezier(0.17, 0.67, 0.45, 1);"
        target="_blank"
      >
        0x12...x123
      </a>
    </span>
  </div>
</DocumentFragment>
`;
